# ica-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-homebrew.yml
openclaw/: README.md  skill.example.json
packaging/homebrew/: README.md  ica-cli.rb  ica-cli.rb.template
scripts/: create_source_archive.py  render_homebrew_formula.py
src/ica_cli/: cli.py  config.py  models.py  provider_factory.py  test_cli_parser.py  test_config.py
src/ica_cli/providers/: __init__.py  base.py  ica_current.py  ica_legacy.py
